next question login jump bug

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -850,18 +850,6 @@ select {
 .mt-3 {
   margin-top: 0.75rem;
 }
-.ml-2 {
-  margin-left: 0.5rem;
-}
-.-mr-0\.5 {
-  margin-right: -0.125rem;
-}
-.-mr-0 {
-  margin-right: -0px;
-}
-.-mr-2 {
-  margin-right: -0.5rem;
-}
 .mt-6 {
   margin-top: 1.5rem;
 }
@@ -894,6 +882,9 @@ select {
 }
 .ml-1 {
   margin-left: 0.25rem;
+}
+.ml-2 {
+  margin-left: 0.5rem;
 }
 .-mr-12 {
   margin-right: -3rem;
@@ -943,20 +934,17 @@ select {
 .h-3 {
   height: 0.75rem;
 }
+.h-20 {
+  height: 5rem;
+}
 .h-screen {
   height: 100vh;
-}
-.h-16 {
-  height: 4rem;
 }
 .h-6 {
   height: 1.5rem;
 }
 .h-full {
   height: 100%;
-}
-.h-20 {
-  height: 5rem;
 }
 .h-8 {
   height: 2rem;
@@ -978,6 +966,9 @@ select {
 }
 .h-56 {
   height: 14rem;
+}
+.h-16 {
+  height: 4rem;
 }
 .h-0 {
   height: 0px;
@@ -1006,17 +997,14 @@ select {
 .w-3 {
   width: 0.75rem;
 }
-.w-auto {
-  width: auto;
-}
-.w-4 {
-  width: 1rem;
-}
 .w-20 {
   width: 5rem;
 }
 .w-0 {
   width: 0px;
+}
+.w-auto {
+  width: auto;
 }
 .w-12 {
   width: 3rem;
@@ -1029,6 +1017,9 @@ select {
 }
 .w-2\/3 {
   width: 66.666667%;
+}
+.w-4 {
+  width: 1rem;
 }
 .w-8 {
   width: 2rem;
@@ -1246,11 +1237,6 @@ select {
   margin-right: calc(2rem * var(--tw-space-x-reverse));
   margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
-.space-y-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
-}
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -1260,6 +1246,11 @@ select {
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-y-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 .divide-y > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-y-reverse: 0;
@@ -1580,9 +1571,6 @@ select {
 .stroke-current {
   stroke: currentColor;
 }
-.p-2 {
-  padding: 0.5rem;
-}
 .p-6 {
   padding: 1.5rem;
 }
@@ -1591,6 +1579,9 @@ select {
 }
 .p-3 {
   padding: 0.75rem;
+}
+.p-2 {
+  padding: 0.5rem;
 }
 .p-4 {
   padding: 1rem;
@@ -1630,14 +1621,6 @@ select {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -1649,6 +1632,10 @@ select {
 .px-9 {
   padding-left: 2.25rem;
   padding-right: 2.25rem;
+}
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 .py-2\.5 {
   padding-top: 0.625rem;
@@ -1686,6 +1673,10 @@ select {
   padding-left: 2rem;
   padding-right: 2rem;
 }
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
 .pt-2 {
   padding-top: 0.5rem;
 }
@@ -1716,12 +1707,6 @@ select {
 .pr-3 {
   padding-right: 0.75rem;
 }
-.pb-3 {
-  padding-bottom: 0.75rem;
-}
-.pb-1 {
-  padding-bottom: 0.25rem;
-}
 .pt-6 {
   padding-top: 1.5rem;
 }
@@ -1748,6 +1733,9 @@ select {
 }
 .pb-6 {
   padding-bottom: 1.5rem;
+}
+.pb-3 {
+  padding-bottom: 0.75rem;
 }
 .pl-16 {
   padding-left: 4rem;
@@ -1859,9 +1847,6 @@ select {
 }
 .leading-5 {
   line-height: 1.25rem;
-}
-.leading-4 {
-  line-height: 1rem;
 }
 .leading-tight {
   line-height: 1.25;
@@ -2301,10 +2286,6 @@ select {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }
-.focus\:text-gray-500:focus {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
 .focus\:text-white:focus {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -2410,22 +2391,9 @@ select {
 }
 @media (min-width: 640px) {
 
-  .sm\:-my-px {
-    margin-top: -1px;
-    margin-bottom: -1px;
-  }
-
   .sm\:-mx-6 {
     margin-left: -1.5rem;
     margin-right: -1.5rem;
-  }
-
-  .sm\:ml-10 {
-    margin-left: 2.5rem;
-  }
-
-  .sm\:ml-6 {
-    margin-left: 1.5rem;
   }
 
   .sm\:block {
